--- a/FbxImporter/FbxImporter.csproj
+++ b/FbxImporter/FbxImporter.csproj
@@ -11,6 +11,7 @@
         <RuntimeIdentifier>win-x64</RuntimeIdentifier>
     </PropertyGroup>
     <ItemGroup>
+        <Folder Include="Models" />
         <Folder Include="Models\" />
         <AvaloniaResource Include="Assets\**" />
         <None Remove=".gitignore" />
@@ -37,6 +38,9 @@
         <PackageReference Include="XamlNameReferenceGenerator" Version="1.3.4" />
     </ItemGroup>
     <ItemGroup>
+      <Reference Include="SoulsAssetPipeline">
+        <HintPath>..\..\SoulsAssetPipeline\SoulsAssetPipeline\bin\Debug\netstandard2.1\SoulsAssetPipeline.dll</HintPath>
+      </Reference>
       <Reference Include="SoulsFormats, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
         <HintPath>..\..\SoulsFormats\SoulsFormats\bin\Debug\net46\SoulsFormats.dll</HintPath>
       </Reference>
