import bugged, fixed compilation issues

--- a/FbxImporter/FbxImporter.csproj
+++ b/FbxImporter/FbxImporter.csproj
@@ -46,4 +46,7 @@
     <ItemGroup>
       <UpToDateCheckInput Remove="Themes\DarkTheme.axaml" />
     </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\FbxDataExtractor\FbxDataExtractor.vcxproj" />
+    </ItemGroup>
 </Project>
