--- a/FbxImporter/FbxImporter.csproj
+++ b/FbxImporter/FbxImporter.csproj
@@ -9,6 +9,10 @@
         <PublishSingleFile>true</PublishSingleFile>
         <SelfContained>false</SelfContained>
         <RuntimeIdentifier>win-x64</RuntimeIdentifier>
+        <Configurations>Debug;Release;Publish</Configurations>
+    </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Publish|AnyCPU'">
+      <Optimize>True</Optimize>
     </PropertyGroup>
     <ItemGroup>
         <AvaloniaResource Include="Assets\**" />
