--- a/FbxImporter/FbxImporter.csproj
+++ b/FbxImporter/FbxImporter.csproj
@@ -43,12 +43,14 @@
       <Reference Include="SoulsAssetPipeline">
         <HintPath>..\..\SoulsAssetPipeline\SoulsAssetPipeline\bin\Debug\netstandard2.1\SoulsAssetPipeline.dll</HintPath>
       </Reference>
+      <Reference Include="SoulsFormats, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+        <HintPath>..\..\SoulsFormats\SoulsFormats\bin\Debug\net46\SoulsFormats.dll</HintPath>
+      </Reference>
     </ItemGroup>
     <ItemGroup>
       <UpToDateCheckInput Remove="Themes\DarkTheme.axaml" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\FbxDataExtractor\FbxDataExtractor.vcxproj" />
-      <ProjectReference Include="..\SoulsFormats\SoulsFormats\SoulsFormats.csproj" />
     </ItemGroup>
 </Project>
